<resources>
    <string name="app_name">快递单号跟踪</string>
    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="btn_scroll_view">ScrollView demo</string>
    <string name="btn_list_view">ListView demo</string>

    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>

    <string name="refresh_list">刷新</string>
    <string name="sync_list">同步</string>
    <string name="add_new_express">添加新的快递编号</string>
    <string name="scan_barcode_button">扫描条形码</string>

    <string name="ShipperCode">快递公司名称：</string>

    <string name="espress_detail">快递信息详情</string>
    <string name="scan_barcode_result">请输入编号：</string>
    <string name="express_number">快递编号：</string>
    <string name="recipient">收件人：</string>
    <string name="sender">寄件人：</string>
    <string name="add_express_date">寄件时间：</string>
    <string name="add_new_express_complete">完成</string>
    <string name="delete_express">删除</string>
    <string name="cancel_exit_express">取消</string>
    <string name="save_express">保存</string>
    <string name="modify_express">修改</string>
    <string name="send_express_day">选择寄件时间</string>
    <string name="express_money">快递费用：</string>
    <string name="login_title">正在登录</string>
    <string name="login_message">登录中,请稍后!</string>
    <string name="user_pass_input_fail">用户名，密码不能为空，且字符不能超过16位!请重新输入。</string>
    <string name="login_fail">登录失败，请稍后再试。</string>
    <string name="login_success">登录成功。</string>
    <string name="insert_express_fail">插入数据失败，可能是已经存在此快递信息，请确认后再尝试。</string>
    <string name="express_id">快递单号：</string>
    <string name="mailing_date">寄件时间：</string>
    <string name="current_state">当前状态：</string>
    <string name="last_logistics_state">最新物流记录：</string>
    <string name="express_code_error_msg">快递单号不能为空,请重新填写。</string>
    <string name="add_express_error_title">填写错误</string>
    <string name="add_receiver_error_msg">收件人必须填写,请重新填写。</string>
    <string name="have_sync">已同步</string>
    <string name="no_sync">未同步</string>
    <string name="save_password">是否保存密码</string>
    <string name="show_password">显示密码</string>
    <string name="login">登录</string>
    <string name="offline">离线模式</string>

</resources>
