<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/express_code_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/express_number"></TextView>

                <EditText
                    android:id="@+id/express_code_edittext"
                    android:layout_width="150dp"
                    android:enabled="false"
                    android:layout_height="wrap_content"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recipient_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recipient"></TextView>

                <EditText
                    android:id="@+id/receiver"
                    android:enabled="false"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/send_express_date_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_express_date"></TextView>

                <EditText
                    android:id="@+id/send_express_date_edittext"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"></EditText>

                <Button
                    android:id="@+id/send_express_datepicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_express_day" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/express_money_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/express_money"></TextView>

                <EditText
                    android:id="@+id/detail_express_money_exittext"
                    android:enabled="false"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"></EditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/current_logistics_state_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_logistics_state"></TextView>

                <EditText
                    android:id="@+id/current_logistics_state_edittext"
                    android:layout_width="match_parent"
                    android:enabled="false"
                    android:maxLines="20"
                    android:minLines="10"
                    android:layout_height="wrap_content"></EditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_express"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete_express"></Button>

                <Button
                    android:id="@+id/modify_express"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/modify_express"></Button>

                <Button
                    android:id="@+id/save_express"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:text="@string/cancel_exit_express"></Button>


                <Button
                    android:id="@+id/cancel_express"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:text="@string/save_express"></Button>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>