<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/express_code_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_barcode_result"></TextView>

                <EditText
                    android:id="@+id/express_code_edittext"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"></EditText>

                <Button
                    android:id="@+id/scan_express_code_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_barcode_button"></Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recipient_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recipient"></TextView>

                <EditText
                    android:id="@+id/recipient_edittext"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/send_express_date_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_express_date"></TextView>

                <EditText
                    android:id="@+id/send_express_date_edittext"
                    android:layout_width="150dp"
                    android:enabled="false"
                    android:text="2018-09-15"
                    android:layout_height="wrap_content"></EditText>

                <Button
                    android:id="@+id/send_express_datepicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_express_day" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/express_money_textview"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/express_money"></TextView>

                <EditText
                    android:id="@+id/express_money_exittext"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"></EditText>

            </LinearLayout>

            <Button
                android:id="@+id/add_new_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchAddNewExpress"
                android:text="@string/add_new_express_complete">
            </Button>

        </LinearLayout>
    </ScrollView>
</LinearLayout>